lab1/Test/L1-A-13-22.output
Error Type A at Line 10
Error Type B at Line 24
Error Type B at Line 26
Error Type A at Line 35
Error Type B at Line 46
